<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.recyclerviewtest.MainActivity">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/requested_book"
            android:title="@string/requested_book"
            android:icon="@mipmap/request"/>
        <item
            android:id="@+id/upload"
            android:icon="@mipmap/upload"
            android:tint="@color/bg_button_login"
            android:title="Upload a new Book" />

        <item
            android:id="@id/all_users"
            android:title="@string/all_users"
            android:tint="@color/bg_gradient_end"
            android:icon="@mipmap/person"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:tint="@color/bg_gradient_end"
        android:icon="@mipmap/settings"/>

    <item
        android:id="@+id/logout"
        android:icon="@mipmap/logout"
        android:tint="@color/bg_gradient_end"
        android:title="Logout" />

    </group>


</menu>
