<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar"/>

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--app:layout_scrollFlags="scroll|enterAlways"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
        <!--app:title="@string/app_name"-->
        <!--app:titleTextColor="@color/white"/>-->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/library_icon"
        android:layout_marginTop="@dimen/login_image_margin_top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/editText"
        android:singleLine="true"
        android:layout_margin="@dimen/edittext_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/editText2"
        android:layout_marginLeft="@dimen/edittext_margin"
        android:layout_marginRight="@dimen/edittext_margin"
        android:singleLine="true"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:id="@+id/loginbutton"
        android:background="?attr/colorPrimary"
        android:layout_marginTop="30sp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
</ScrollView>