<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="10sp"
            app:expandedTitleMarginBottom="80sp"
            app:title="Settings"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="105sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/subtitle"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authorname"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                />


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="8sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_cover"
                android:id="@+id/bookcover"
                android:layout_margin="10sp"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view1"
                android:background="@color/background_gray"
                android:layout_below="@id/bookcover"/>

            <ImageView
                android:layout_width="115dp"
                android:layout_height="175dp"
                android:id="@+id/bookimage"
                android:background="@drawable/button_blue"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_below="@id/view1"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookdescription"
                android:layout_toRightOf="@id/bookimage"
                android:layout_marginTop="10dp"
                android:layout_below="@id/view1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/publication"
                    android:textStyle="bold"
                    android:textColor="#5C6BC0"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/publisher"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:text="@string/categories"
                    android:textColor="#5C6BC0"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/categories"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/pagecount"
                    android:layout_marginTop="5sp"
                    android:textStyle="bold"
                    android:textColor="#5C6BC0"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pageCount"
                    android:textSize="12sp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/available"
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:textColor="#00C853"
                android:layout_below="@id/bookdescription"
                android:layout_alignParentRight="true"
                android:layout_margin="15sp"
                android:layout_marginTop="20sp"
                />

        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginLeft="8sp"
                android:paddingBottom="10sp"
                android:layout_marginRight="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp"
                android:text="@string/description"
                android:id="@+id/descriptiontext" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view3"
                android:background="@color/background_gray"
                android:layout_below="@id/descriptiontext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_below="@id/view3"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp" />
            </LinearLayout>


        </LinearLayout>
       
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
